[gd_scene load_steps=2 format=3 uid="uid://c74edjjjeexmm"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_gxgxq"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_gxgxq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_right = 156.0
offset_bottom = 40.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Main" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Main"]
layout_mode = 0
offset_left = -272.5
offset_top = -236.0
offset_right = 272.5
offset_bottom = -159.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 56
text = "Better Tic-Tac-Toe
"
horizontal_alignment = 1
uppercase = true

[node name="Spacer" type="Label" parent="VBoxContainer/Main"]
layout_mode = 0
offset_left = -272.0
offset_top = -193.0
offset_right = 273.0
offset_bottom = -116.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="SinglePlayer" type="Button" parent="VBoxContainer/Main"]
layout_mode = 0
offset_left = -272.0
offset_top = -107.0
offset_right = 273.0
offset_bottom = -54.0
theme_override_font_sizes/font_size = 32
text = "Singleplayer"

[node name="Spacer2" type="Label" parent="VBoxContainer/Main"]
layout_mode = 0
offset_left = -272.5
offset_top = -17.0
offset_right = 272.5
offset_bottom = 6.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="Multiplayer" type="Button" parent="VBoxContainer/Main"]
layout_mode = 0
offset_left = -272.0
offset_top = -28.0
offset_right = 273.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 32
text = "Multiplayer
"

[node name="Spacer3" type="Label" parent="VBoxContainer/Main"]
layout_mode = 0
offset_left = -272.5
offset_top = 67.0
offset_right = 272.5
offset_bottom = 90.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="Mapmaker" type="Button" parent="VBoxContainer/Main"]
layout_mode = 0
offset_left = -272.0
offset_top = 57.0
offset_right = 273.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 32
text = "Map Maker"

[node name="Spacer5" type="Label" parent="VBoxContainer/Main"]
layout_mode = 0
offset_left = -272.5
offset_top = 67.0
offset_right = 272.5
offset_bottom = 90.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="Settings" type="Button" parent="VBoxContainer/Main"]
layout_mode = 0
offset_left = -272.0
offset_top = 137.0
offset_right = 273.0
offset_bottom = 190.0
theme_override_font_sizes/font_size = 32
text = "Settings
"

[node name="Spacer4" type="Label" parent="VBoxContainer/Main"]
layout_mode = 0
offset_left = -272.5
offset_top = 151.0
offset_right = 272.5
offset_bottom = 174.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="QuitButton" type="Button" parent="VBoxContainer/Main"]
layout_mode = 0
offset_left = -275.0
offset_top = 224.0
offset_right = 270.0
offset_bottom = 277.0
theme_override_font_sizes/font_size = 32
text = "Quit
"

[node name="Singleplayer" type="Control" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Singleplayer"]
layout_mode = 0
offset_left = -272.5
offset_top = -236.0
offset_right = 272.5
offset_bottom = -159.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 56
text = "Singleplayer
"
horizontal_alignment = 1
uppercase = true

[node name="Spacer" type="Label" parent="VBoxContainer/Singleplayer"]
layout_mode = 0
offset_left = -272.5
offset_top = -155.0
offset_right = 272.5
offset_bottom = -78.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 56
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="Continue" type="Button" parent="VBoxContainer/Singleplayer"]
layout_mode = 0
offset_left = -272.5
offset_top = -74.0
offset_right = 272.5
offset_bottom = -21.0
theme_override_font_sizes/font_size = 32
text = "Continue"

[node name="Spacer2" type="Label" parent="VBoxContainer/Singleplayer"]
layout_mode = 0
offset_left = -272.5
offset_top = -17.0
offset_right = 272.5
offset_bottom = 6.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="New" type="Button" parent="VBoxContainer/Singleplayer"]
layout_mode = 0
offset_left = -272.5
offset_top = 10.0
offset_right = 272.5
offset_bottom = 63.0
theme_override_font_sizes/font_size = 32
text = "New Campaign"

[node name="Spacer3" type="Label" parent="VBoxContainer/Singleplayer"]
layout_mode = 0
offset_left = -272.5
offset_top = 67.0
offset_right = 272.5
offset_bottom = 90.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="Load" type="Button" parent="VBoxContainer/Singleplayer"]
layout_mode = 0
offset_left = -272.5
offset_top = 94.0
offset_right = 272.5
offset_bottom = 147.0
theme_override_font_sizes/font_size = 32
text = "Load"

[node name="Spacer4" type="Label" parent="VBoxContainer/Singleplayer"]
layout_mode = 0
offset_left = -272.5
offset_top = 151.0
offset_right = 272.5
offset_bottom = 174.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="Back" type="Button" parent="VBoxContainer/Singleplayer"]
layout_mode = 0
offset_left = -272.5
offset_top = 178.0
offset_right = 272.5
offset_bottom = 231.0
theme_override_font_sizes/font_size = 32
text = "Back
"

[node name="MapMaker" type="Control" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/MapMaker"]
layout_mode = 0
offset_left = -272.5
offset_top = -236.0
offset_right = 272.5
offset_bottom = -159.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 56
text = "Map Maker

"
horizontal_alignment = 1
uppercase = true

[node name="Spacer" type="Label" parent="VBoxContainer/MapMaker"]
layout_mode = 0
offset_left = -272.5
offset_top = -155.0
offset_right = 272.5
offset_bottom = -78.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 56
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="OpenMap" type="Button" parent="VBoxContainer/MapMaker"]
layout_mode = 0
offset_left = -272.5
offset_top = -74.0
offset_right = 272.5
offset_bottom = -21.0
theme_override_font_sizes/font_size = 32
text = "Open
"

[node name="Spacer2" type="Label" parent="VBoxContainer/MapMaker"]
layout_mode = 0
offset_left = -272.5
offset_top = -17.0
offset_right = 272.5
offset_bottom = 6.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="NewMap" type="Button" parent="VBoxContainer/MapMaker"]
layout_mode = 0
offset_left = -272.5
offset_top = 10.0
offset_right = 272.5
offset_bottom = 63.0
theme_override_font_sizes/font_size = 32
text = "New"

[node name="Spacer4" type="Label" parent="VBoxContainer/MapMaker"]
layout_mode = 0
offset_left = -272.5
offset_top = 151.0
offset_right = 272.5
offset_bottom = 174.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="Back" type="Button" parent="VBoxContainer/MapMaker"]
layout_mode = 0
offset_left = -272.0
offset_top = 102.0
offset_right = 273.0
offset_bottom = 155.0
theme_override_font_sizes/font_size = 32
text = "Back
"

[node name="Multiplayer" type="Control" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Multiplayer"]
layout_mode = 0
offset_left = -272.5
offset_top = -236.0
offset_right = 272.5
offset_bottom = -159.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 56
text = "Multiplayer
"
horizontal_alignment = 1
uppercase = true

[node name="Spacer" type="Label" parent="VBoxContainer/Multiplayer"]
layout_mode = 0
offset_left = -272.5
offset_top = -155.0
offset_right = 272.5
offset_bottom = -78.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 56
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="Online" type="Button" parent="VBoxContainer/Multiplayer"]
layout_mode = 0
offset_left = -272.5
offset_top = -74.0
offset_right = 272.5
offset_bottom = -21.0
theme_override_font_sizes/font_size = 32
text = "Online Match
"

[node name="Spacer2" type="Label" parent="VBoxContainer/Multiplayer"]
layout_mode = 0
offset_left = -272.5
offset_top = -17.0
offset_right = 272.5
offset_bottom = 6.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="Local" type="Button" parent="VBoxContainer/Multiplayer"]
layout_mode = 0
offset_left = -272.5
offset_top = 10.0
offset_right = 272.5
offset_bottom = 63.0
theme_override_font_sizes/font_size = 32
text = "Local Match"

[node name="Spacer3" type="Label" parent="VBoxContainer/Multiplayer"]
layout_mode = 0
offset_left = -272.5
offset_top = 67.0
offset_right = 272.5
offset_bottom = 90.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="Back" type="Button" parent="VBoxContainer/Multiplayer"]
layout_mode = 0
offset_left = -272.0
offset_top = 87.0
offset_right = 273.0
offset_bottom = 140.0
theme_override_font_sizes/font_size = 32
text = "Back
"

[node name="Settings" type="Control" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Settings"]
layout_mode = 0
offset_left = -272.5
offset_top = -236.0
offset_right = 272.5
offset_bottom = -159.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 56
text = "Settings"
horizontal_alignment = 1
uppercase = true

[node name="Spacer" type="Label" parent="VBoxContainer/Settings"]
layout_mode = 0
offset_left = -272.5
offset_top = -155.0
offset_right = 272.5
offset_bottom = -78.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 56
text = "
"
horizontal_alignment = 1
uppercase = true

[node name="BackButton" type="Button" parent="VBoxContainer/Settings"]
layout_mode = 0
offset_left = -272.5
offset_top = 178.0
offset_right = 272.5
offset_bottom = 231.0
theme_override_font_sizes/font_size = 32
text = "Back
"

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="pressed" from="VBoxContainer/Main/SinglePlayer" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="VBoxContainer/Main/Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Main/Mapmaker" to="." method="_on_mapmaker_pressed"]
[connection signal="pressed" from="VBoxContainer/Main/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Main/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Singleplayer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Singleplayer/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="VBoxContainer/Singleplayer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/Singleplayer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/MapMaker/OpenMap" to="." method="_on_open_map_pressed"]
[connection signal="pressed" from="VBoxContainer/MapMaker/NewMap" to="." method="_on_new_map_pressed"]
[connection signal="pressed" from="VBoxContainer/MapMaker/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Multiplayer/Online" to="." method="_on_online_pressed"]
[connection signal="pressed" from="VBoxContainer/Multiplayer/Local" to="." method="_on_local_pressed"]
[connection signal="pressed" from="VBoxContainer/Multiplayer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings/BackButton" to="." method="_on_back_pressed"]
